🔧 Přidán cache-busting a lepší debugging

--- a/static/index.html
+++ b/static/index.html
@@ -309,6 +309,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=202412081415"></script>
 </body>
 </html> 
