--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="cs">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,7 +35,7 @@
             background: rgba(255, 255, 255, 0.95);
             color: #333;
             border-radius: 25px;
-            box-shadow: 0 15px 40px rgba(0,0,0,0.1);
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
             backdrop-filter: blur(15px);
             border: 1px solid rgba(255, 255, 255, 0.2);
         }
@@ -49,6 +50,13 @@
             background-clip: text;
         }
 
+        .header .subtitle {
+            margin: 0 0 20px 0;
+            font-size: 1.1rem;
+            color: #6b7280;
+            font-weight: 500;
+        }
+
         .api-status {
             display: inline-flex;
             align-items: center;
@@ -59,20 +67,27 @@
             font-size: 1rem;
             background: rgba(255, 255, 255, 0.9);
             border: 2px solid #e5e7eb;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
-        .config-section, .upload-section, .files-section, .results-section, .api-info {
+        .config-section,
+        .upload-section,
+        .files-section,
+        .results-section,
+        .api-info {
             background: rgba(255, 255, 255, 0.95);
             padding: 30px;
             border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
             margin-bottom: 25px;
             backdrop-filter: blur(15px);
             border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
-        .config-section h3, .files-section h3, .results-section h3, .api-info h3 {
+        .config-section h3,
+        .files-section h3,
+        .results-section h3,
+        .api-info h3 {
             margin: 0 0 20px 0;
             color: #374151;
             font-size: 1.3rem;
@@ -105,7 +120,7 @@
             font-size: 1rem;
             transition: all 0.3s ease;
             background: white;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
         }
 
         .config-item input[type="number"]:focus,
@@ -190,14 +205,16 @@
             display: inline-block;
             width: 20px;
             height: 20px;
-            border: 3px solid rgba(255,255,255,.3);
+            border: 3px solid rgba(255, 255, 255, .3);
             border-radius: 50%;
             border-top-color: #fff;
             animation: spin 1s ease-in-out infinite;
         }
 
         @keyframes spin {
-            to { transform: rotate(360deg); }
+            to {
+                transform: rotate(360deg);
+            }
         }
 
         .api-endpoints {
@@ -219,47 +236,17 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <header class="header">
             <h1>🖼️ Universal Image Processor</h1>
+            <p class="subtitle">1000×1000 WebP • Max 100KB • Automatické zpracování</p>
             <div class="api-status" id="apiStatus">
                 <span class="status-indicator">🟡</span>
                 <span class="status-text">Kontroluji API...</span>
             </div>
         </header>
-
-        <div class="config-section">
-            <h3>⚙️ Konfigurace</h3>
-            <div class="config-grid">
-                <div class="config-item">
-                    <label for="targetWidth">Šířka (px):</label>
-                    <input type="number" id="targetWidth" value="1000" min="100" max="4000">
-                </div>
-                <div class="config-item">
-                    <label for="targetHeight">Výška (px):</label>
-                    <input type="number" id="targetHeight" value="1000" min="100" max="4000">
-                </div>
-                <div class="config-item">
-                    <label for="quality">Kvalita (%):</label>
-                    <input type="number" id="quality" value="95" min="1" max="100">
-                </div>
-                <div class="config-item">
-                    <label for="backgroundColor">Barva pozadí:</label>
-                    <input type="color" id="backgroundColor" value="#F3F3F3">
-                </div>
-                <div class="config-item">
-                    <label for="productSizeRatio">Velikost produktu (%):</label>
-                    <input type="number" id="productSizeRatio" value="0.75" min="0.1" max="1" step="0.1">
-                </div>
-                <div class="config-item">
-                    <label>
-                        <input type="checkbox" id="autoUpscale">
-                        Automatický upscale
-                    </label>
-                </div>
-            </div>
-        </div>
 
         <div class="upload-section">
             <div class="drop-zone" id="dropZone">
@@ -289,11 +276,11 @@
             <h3>📡 API Informace</h3>
             <div class="api-endpoints">
                 <div class="endpoint">
-                    <strong>Health Check:</strong> 
+                    <strong>Health Check:</strong>
                     <a href="/api/health" target="_blank">GET /api/health</a>
                 </div>
                 <div class="endpoint">
-                    <strong>Konfigurace:</strong> 
+                    <strong>Konfigurace:</strong>
                     <a href="/api/config" target="_blank">GET /api/config</a>
                 </div>
                 <div class="endpoint">
@@ -311,4 +298,5 @@
 
     <script src="script.js?v=202412081415"></script>
 </body>
-</html> 
+
+</html>
