--- a/static/index.html
+++ b/static/index.html
@@ -4,299 +4,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🖼️ Universal Image Processor - Test Interface v2</title>
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            padding: 20px;
-            color: #333;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .header {
-            text-align: center;
-            margin-bottom: 30px;
-            padding: 40px;
-            background: rgba(255, 255, 255, 0.95);
-            color: #333;
-            border-radius: 25px;
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(15px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-        }
-
-        .header h1 {
-            margin: 0 0 15px 0;
-            font-size: 2.5rem;
-            font-weight: 700;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-
-        .header .subtitle {
-            margin: 0 0 20px 0;
-            font-size: 1.1rem;
-            color: #6b7280;
-            font-weight: 500;
-        }
-
-        .api-status {
-            display: inline-flex;
-            align-items: center;
-            gap: 10px;
-            padding: 12px 24px;
-            border-radius: 30px;
-            font-weight: 600;
-            font-size: 1rem;
-            background: rgba(255, 255, 255, 0.9);
-            border: 2px solid #e5e7eb;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
-
-        .config-section,
-        .upload-section,
-        .files-section,
-        .results-section,
-        .api-info {
-            background: rgba(255, 255, 255, 0.95);
-            padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-            margin-bottom: 25px;
-            backdrop-filter: blur(15px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-        }
-
-        .config-section h3,
-        .files-section h3,
-        .results-section h3,
-        .api-info h3 {
-            margin: 0 0 20px 0;
-            color: #374151;
-            font-size: 1.3rem;
-            font-weight: 600;
-        }
-
-        .config-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-        }
-
-        .config-item {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-        }
-
-        .config-item label {
-            font-weight: 500;
-            color: #4b5563;
-            font-size: 0.9rem;
-        }
-
-        .config-item input[type="number"],
-        .config-item input[type="color"] {
-            padding: 15px;
-            border: 2px solid #e5e7eb;
-            border-radius: 12px;
-            font-size: 1rem;
-            transition: all 0.3s ease;
-            background: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-        }
-
-        .config-item input[type="number"]:focus,
-        .config-item input[type="color"]:focus {
-            outline: none;
-            border-color: #667eea;
-            box-shadow: 0 0 0 4px rgba(102, 126, 234, 0.15);
-        }
-
-        .drop-zone {
-            border: 3px dashed #d1d5db;
-            border-radius: 20px;
-            padding: 80px 30px;
-            text-align: center;
-            cursor: pointer;
-            transition: all 0.4s ease;
-            background: rgba(249, 250, 251, 0.8);
-        }
-
-        .drop-zone:hover {
-            border-color: #667eea;
-            background: rgba(240, 244, 255, 0.95);
-            transform: translateY(-3px);
-        }
-
-        .upload-icon {
-            font-size: 3rem;
-            margin-bottom: 15px;
-            opacity: 0.7;
-        }
-
-        .drop-zone p {
-            margin: 10px 0;
-            color: #6b7280;
-            font-size: 1.1rem;
-        }
-
-        .files-list {
-            max-height: 200px;
-            overflow-y: auto;
-            margin-bottom: 20px;
-            border: 1px solid #e5e7eb;
-            border-radius: 8px;
-            padding: 10px;
-            background: white;
-        }
-
-        .file-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px;
-            border-bottom: 1px solid #f3f4f6;
-            font-size: 0.9rem;
-        }
-
-        .process-button {
-            width: 100%;
-            padding: 18px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            border: none;
-            border-radius: 15px;
-            font-size: 1.2rem;
-            font-weight: 700;
-            cursor: pointer;
-            transition: all 0.4s ease;
-            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.3);
-        }
-
-        .process-button:hover:not(:disabled) {
-            transform: translateY(-3px);
-            box-shadow: 0 15px 35px rgba(102, 126, 234, 0.4);
-        }
-
-        .process-button:disabled {
-            opacity: 0.6;
-            cursor: not-allowed;
-        }
-
-        .loading {
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            border: 3px solid rgba(255, 255, 255, .3);
-            border-radius: 50%;
-            border-top-color: #fff;
-            animation: spin 1s ease-in-out infinite;
-        }
-
-        @keyframes spin {
-            to {
-                transform: rotate(360deg);
-            }
-        }
-
-        .api-endpoints {
-            display: grid;
-            gap: 10px;
-        }
-
-        .endpoint {
-            padding: 10px;
-            background: rgba(249, 250, 251, 0.8);
-            border-radius: 8px;
-            border-left: 4px solid #667eea;
-        }
-
-        .endpoint a {
-            color: #667eea;
-            text-decoration: none;
-            font-weight: 500;
-        }
-    </style>
+    <title>🖼️ Image Processor</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <header class="header">
-            <h1>🖼️ Universal Image Processor</h1>
-            <p class="subtitle">1000×1000 WebP • Max 100KB • Automatické zpracování</p>
-            <div class="api-status" id="apiStatus">
-                <span class="status-indicator">🟡</span>
-                <span class="status-text">Kontroluji API...</span>
-            </div>
-        </header>
-
-        <div class="upload-section">
-            <div class="drop-zone" id="dropZone">
-                <div class="drop-zone-content">
-                    <div class="upload-icon">📁</div>
-                    <p>Přetáhněte obrázky sem nebo klikněte pro výběr</p>
-                    <p class="file-info" id="fileInfo">Podporované formáty: JPG, PNG, BMP, TIFF, WebP</p>
+        <div class="glass-card main-card">
+            <div class="header">
+                <div class="logo">
+                    <div class="logo-icon">🖼️</div>
+                    <h1>Image Processor</h1>
+                </div>
+                <div class="specs">
+                    <span class="spec-badge">1000×1000</span>
+                    <span class="spec-badge">WebP</span>
+                    <span class="spec-badge">Max 100KB</span>
                 </div>
             </div>
-            <input type="file" id="fileInput" multiple accept="image/*" style="display: none;">
-        </div>
 
-        <div class="files-section" id="filesSection" style="display: none;">
-            <h3>📋 Vybrané soubory (<span id="fileCount">0</span>)</h3>
-            <div class="files-list" id="filesList"></div>
-            <button class="process-button" id="processButton" disabled>
-                🚀 Zpracovat obrázky
-            </button>
-        </div>
-
-        <div class="results-section" id="resultsSection" style="display: none;">
-            <h3>✅ Zpracované obrázky</h3>
-            <div class="processed-images" id="processedImages"></div>
-        </div>
-
-        <div class="api-info">
-            <h3>📡 API Informace</h3>
-            <div class="api-endpoints">
-                <div class="endpoint">
-                    <strong>Health Check:</strong>
-                    <a href="/api/health" target="_blank">GET /api/health</a>
+            <div class="upload-area">
+                <div class="drop-zone" id="dropZone">
+                    <div class="drop-content">
+                        <div class="drop-icon">📤</div>
+                        <h2>Přetáhni obrázky sem</h2>
+                        <p>nebo klikni pro výběr</p>
+                        <div class="supported-formats">
+                            JPG • PNG • BMP • TIFF • WebP
+                        </div>
+                    </div>
                 </div>
-                <div class="endpoint">
-                    <strong>Konfigurace:</strong>
-                    <a href="/api/config" target="_blank">GET /api/config</a>
-                </div>
-                <div class="endpoint">
-                    <strong>Zpracování jednoho obrázku:</strong> POST /api/process-single
-                </div>
-                <div class="endpoint">
-                    <strong>Zpracování více obrázků:</strong> POST /api/process-batch
-                </div>
-                <div class="endpoint">
-                    <strong>Base64 zpracování:</strong> POST /api/process-base64
-                </div>
+                <input type="file" id="fileInput" multiple accept="image/*" style="display: none;">
             </div>
+
+            <div class="files-preview" id="filesSection" style="display: none;">
+                <div class="files-header">
+                    <h3>Vybrané soubory</h3>
+                    <span class="file-count" id="fileCount">0</span>
+                </div>
+                <div class="files-list" id="filesList"></div>
+                <button class="process-btn" id="processButton">
+                    <span class="btn-icon">✨</span>
+                    <span class="btn-text">Zpracovat</span>
+                </button>
+            </div>
+
+            <div class="results" id="resultsSection" style="display: none;">
+                <div class="results-header">
+                    <h3>✨ Hotovo!</h3>
+                </div>
+                <div class="results-grid" id="processedImages"></div>
+            </div>
+        </div>
+
+        <div class="footer">
+            <p>Automatické zpracování na 1000×1000 WebP s optimalizací na 100KB</p>
         </div>
     </div>
 
-    <script src="script.js?v=202412081415"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
