Update: Czech title and bear favicon
- Changed title to 'Úprava produktových obrázků'
- Removed emoji from logo
- Added 🐻 bear favicon

--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🖼️ Image Processor</title>
+    <title>Úprava produktových obrázků</title>
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐻</text></svg>">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,8 +16,7 @@
         <div class="glass-card main-card">
             <div class="header">
                 <div class="logo">
-                    <div class="logo-icon">🖼️</div>
-                    <h1>Image Processor</h1>
+                    <h1>Úprava produktových obrázků</h1>
                 </div>
                 <div class="specs">
                     <span class="spec-badge">1000×1000</span>
