feat: add AI background removal toggle
- Added checkbox toggle in frontend for AI background removal
- Integrated rembg library for automatic background detection and removal
- Works for images with gradients, shadows, or complex backgrounds
- CSS styling for toggle option

--- a/static/index.html
+++ b/static/index.html
@@ -39,6 +39,14 @@
                 <input type="file" id="fileInput" multiple accept="image/*" style="display: none;">
             </div>
 
+            <div class="options-section">
+                <label class="toggle-option">
+                    <input type="checkbox" id="aiBackgroundRemoval">
+                    <span class="toggle-label">Automatické odstranění pozadí (AI)</span>
+                    <span class="toggle-hint">Pro fotky s gradientem nebo stínem</span>
+                </label>
+            </div>
+
             <div class="files-preview" id="filesSection" style="display: none;">
                 <div class="files-header">
                     <h3>Vybrané soubory</h3>
